//protoc --go_out=plugins=grpc:.. poker.proto

syntax = "proto3";

package calculator;
option go_package = "proto/";



message GetWinRateRequest{
  message Card {
    int32 Num  = 1;
    string Suit = 2;
  }

  message Player{
    string Name = 1;
    Card Card1 = 2;
    Card Card2 = 3;
  }

  map<string, Player> Players = 1;

}

message GetWinRateResponse {
  map<string, double> result = 1;
}

service GetWinRateService {
  rpc GetWinRate(GetWinRateRequest) returns (GetWinRateResponse) {};
}